--- a/modules/account_payment/locale/fr_FR.po
+++ b/modules/account_payment/locale/fr_FR.po
@@ -11,6 +11,10 @@ msgid "Payment \"%s\" must be in draft before deletion."
 msgstr ""
 "Le paiement \"%s\" doit être au statut Brouillon pour pouvoir être supprimé"
 
+msgctxt "field:account.move.line,move_description:"
+msgid "Move Description"
+msgstr ""
+
 msgctxt "field:account.move.line,payment_amount:"
 msgid "Payment Amount"
 msgstr "Mensualité"
