--- a/modules/country_cog/locale/fr_FR.po
+++ b/modules/country_cog/locale/fr_FR.po
@@ -4,11 +4,11 @@ msgstr "Content-Type: text/plain; charset=utf-8\n"
 
 msgctxt "field:country.country,xml_id:"
 msgid "XML Id"
-msgstr ""
+msgstr "Identifiant XML"
 
 msgctxt "field:country.subdivision,xml_id:"
 msgid "XML Id"
-msgstr ""
+msgstr "Identifiant XML"
 
 msgctxt "field:country.zipcode,city:"
 msgid ""
@@ -52,7 +52,7 @@ msgstr " "
 
 msgctxt "field:country.zipcode,xml_id:"
 msgid "XML Id"
-msgstr ""
+msgstr "Identifiant XML"
 
 msgctxt "field:country.zipcode,zip:"
 msgid ""
