--- a/modules/loan/locale/fr_FR.po
+++ b/modules/loan/locale/fr_FR.po
@@ -2,6 +2,10 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
+msgctxt "field:contract,change_loans_order:"
+msgid "Change Order"
+msgstr "Changer l'ordre"
+
 msgctxt "field:contract,doc_received:"
 msgid "All Document Received"
 msgstr "Documents Reçus"
@@ -17,6 +21,58 @@ msgstr "Emprunteur"
 msgctxt "field:contract,loans:"
 msgid "Loans"
 msgstr "Prêts"
+
+msgctxt "field:contract,loans_ordered:"
+msgid "Loans"
+msgstr "Prêts"
+
+msgctxt "field:contract-loan,contract:"
+msgid "Contract"
+msgstr "Contrat"
+
+msgctxt "field:contract-loan,create_date:"
+msgid "Create Date"
+msgstr "Date de Création"
+
+msgctxt "field:contract-loan,create_date_:"
+msgid "Creation date"
+msgstr "Date de Création"
+
+msgctxt "field:contract-loan,create_uid:"
+msgid "Create User"
+msgstr "Créé par"
+
+msgctxt "field:contract-loan,id:"
+msgid "ID"
+msgstr "ID"
+
+msgctxt "field:contract-loan,loan:"
+msgid "Loan"
+msgstr "Prêt"
+
+msgctxt "field:contract-loan,loan_number:"
+msgid "Loan Number"
+msgstr "Numéro du Prêt"
+
+msgctxt "field:contract-loan,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Must Expand Tree"
+
+msgctxt "field:contract-loan,rec_name:"
+msgid "Name"
+msgstr "Nom"
+
+msgctxt "field:contract-loan,write_date:"
+msgid "Write Date"
+msgstr "Date de mise à jour"
+
+msgctxt "field:contract-loan,write_uid:"
+msgid "Write User"
+msgstr "Mis à jour par"
+
+msgctxt "field:contract-loan,xml_id:"
+msgid "XML Id"
+msgstr "Identifiant XML"
 
 msgctxt "field:contract.covered_data,contract:"
 msgid "Contract"
@@ -42,9 +98,9 @@ msgctxt "field:loan,amount:"
 msgid "Amount"
 msgstr "Montant"
 
-msgctxt "field:loan,contract:"
-msgid "Contract"
-msgstr "Contrat"
+msgctxt "field:loan,contracts:"
+msgid "Contracts"
+msgstr "Contrats"
 
 msgctxt "field:loan,create_date:"
 msgid "Create Date"
@@ -81,6 +137,10 @@ msgstr "Durée du Différé"
 msgctxt "field:loan,early_payments:"
 msgid "Early Payments"
 msgstr "Remboursements Anticipés"
+
+msgctxt "field:loan,end_date:"
+msgid "End Date"
+msgstr "Date de Fin"
 
 msgctxt "field:loan,first_payment_date:"
 msgid "First Payment Date"
@@ -152,7 +212,7 @@ msgstr "Mis à jour par"
 
 msgctxt "field:loan,xml_id:"
 msgid "XML Id"
-msgstr ""
+msgstr "Identifiant XML"
 
 msgctxt "field:loan.create.amortization_table,id:"
 msgid "ID"
@@ -229,10 +289,6 @@ msgstr "Organisme Prêteur"
 msgctxt "field:loan.create.parameters,loan:"
 msgid "Loan"
 msgstr "Prêt"
-
-msgctxt "field:loan.create.parameters,loan_shares:"
-msgid "Loan Shares"
-msgstr "Quotités"
 
 msgctxt "field:loan.create.parameters,must_expand_tree:"
 msgid "Must Expand Tree"
@@ -328,7 +384,7 @@ msgstr "Mis à jour par"
 
 msgctxt "field:loan.increment,xml_id:"
 msgid "XML Id"
-msgstr ""
+msgstr "Identifiant XML"
 
 msgctxt "field:loan.payment,amount:"
 msgid "Amount"
@@ -374,10 +430,6 @@ msgctxt "field:loan.payment,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:loan.payment,insurance:"
-msgid "Insurance"
-msgstr "Assurance"
-
 msgctxt "field:loan.payment,interest:"
 msgid "Interest"
 msgstr "Intérêt"
@@ -420,7 +472,11 @@ msgstr "Mis à jour par"
 
 msgctxt "field:loan.payment,xml_id:"
 msgid "XML Id"
-msgstr ""
+msgstr "Identifiant XML"
+
+msgctxt "field:loan.share,covered_data:"
+msgid "Covered Data"
+msgstr "Données de Couverture"
 
 msgctxt "field:loan.share,create_date:"
 msgid "Create Date"
@@ -450,6 +506,10 @@ msgctxt "field:loan.share,must_expand_tree:"
 msgid "Must Expand Tree"
 msgstr "Etendre Arbre"
 
+msgctxt "field:loan.share,option:"
+msgid "Contract Option"
+msgstr "Garantie Souscrite"
+
 msgctxt "field:loan.share,person:"
 msgid "Person"
 msgstr "Personne Physique"
@@ -476,7 +536,7 @@ msgstr "Mis à jour par"
 
 msgctxt "field:loan.share,xml_id:"
 msgid "XML Id"
-msgstr ""
+msgstr "Identifiant XML"
 
 msgctxt "field:offered.option.description,is_loan:"
 msgid ""
@@ -486,9 +546,9 @@ msgctxt "field:offered.product,is_loan:"
 msgid ""
 msgstr " "
 
-msgctxt "model:contract.covered_data-loan.share,name:"
-msgid "Loan Covered Data Loan Share Relation"
-msgstr "Relation Données de Couverture et Quotités"
+msgctxt "model:contract-loan,name:"
+msgid "Contract Loan Relation"
+msgstr ""
 
 msgctxt "model:ir.action,name:launch_loan_creation_wizard"
 msgid "Loan Create"
@@ -693,6 +753,10 @@ msgstr "Planifié"
 msgctxt "selection:offered.option.description,family:"
 msgid "Loan"
 msgstr "Emprunteur"
+
+msgctxt "view:contract-loan:"
+msgid "Contract Loan Relation"
+msgstr ""
 
 msgctxt "view:contract:"
 msgid "Create Loan"
