--- a/modules/account_cog/locale/fr_FR.po
+++ b/modules/account_cog/locale/fr_FR.po
@@ -12,15 +12,15 @@ msgstr "Le code doit être unique"
 
 msgctxt "field:account.account,xml_id:"
 msgid "XML Id"
-msgstr ""
+msgstr "Identifiant XML"
 
 msgctxt "field:account.account.type,xml_id:"
 msgid "XML Id"
-msgstr ""
+msgstr "Identifiant XML"
 
 msgctxt "field:account.configuration,xml_id:"
 msgid "XML Id"
-msgstr ""
+msgstr "Identifiant XML"
 
 msgctxt "field:account.fee.description,code:"
 msgid "Code"
@@ -76,7 +76,7 @@ msgstr "Mis à jour par"
 
 msgctxt "field:account.fee.description,xml_id:"
 msgid "XML Id"
-msgstr ""
+msgstr "Identifiant XML"
 
 msgctxt "field:account.fee.description.version,create_date:"
 msgid "Create Date"
@@ -132,19 +132,23 @@ msgstr "Mis à jour par"
 
 msgctxt "field:account.fee.description.version,xml_id:"
 msgid "XML Id"
-msgstr ""
+msgstr "Identifiant XML"
 
 msgctxt "field:account.fiscalyear,xml_id:"
 msgid "XML Id"
-msgstr ""
+msgstr "Identifiant XML"
 
 msgctxt "field:account.journal,xml_id:"
 msgid "XML Id"
-msgstr ""
+msgstr "Identifiant XML"
+
+msgctxt "field:account.move,xml_id:"
+msgid "XML Id"
+msgstr "Identifiant XML"
 
 msgctxt "field:account.period,xml_id:"
 msgid "XML Id"
-msgstr ""
+msgstr "Identifiant XML"
 
 msgctxt "field:account.tax.description,code:"
 msgid "Code"
@@ -200,7 +204,7 @@ msgstr "Mis à jour par"
 
 msgctxt "field:account.tax.description,xml_id:"
 msgid "XML Id"
-msgstr ""
+msgstr "Identifiant XML"
 
 msgctxt "field:account.tax.description.version,create_date:"
 msgid "Create Date"
@@ -256,11 +260,19 @@ msgstr "Mis à jour par"
 
 msgctxt "field:account.tax.description.version,xml_id:"
 msgid "XML Id"
-msgstr ""
+msgstr "Identifiant XML"
 
 msgctxt "field:company.company,fiscal_years:"
 msgid ""
 msgstr " "
+
+msgctxt "field:ir.test_case,fiscal_year_periods_frequency:"
+msgid "Fiscal Year periods frequency"
+msgstr ""
+
+msgctxt "field:ir.test_case,fiscal_year_sync_date:"
+msgid "Fiscal Year Sync Date"
+msgstr ""
 
 msgctxt "model:account.fee.description,name:"
 msgid "Fee Description"
@@ -317,6 +329,22 @@ msgstr "Taux"
 msgctxt "selection:account.tax.description.version,kind:"
 msgid "Rule"
 msgstr "Règle"
+
+msgctxt "selection:ir.test_case,fiscal_year_periods_frequency:"
+msgid "Half yearly"
+msgstr ""
+
+msgctxt "selection:ir.test_case,fiscal_year_periods_frequency:"
+msgid "Monthly"
+msgstr "Mensuel"
+
+msgctxt "selection:ir.test_case,fiscal_year_periods_frequency:"
+msgid "Quarterly"
+msgstr "Trimestriel"
+
+msgctxt "selection:ir.test_case,fiscal_year_periods_frequency:"
+msgid "Yearly"
+msgstr "Annuel"
 
 msgctxt "view:account.fee.description.version:"
 msgid "Fee Description Version"
