--- a/modules/company_cog/locale/fr_FR.po
+++ b/modules/company_cog/locale/fr_FR.po
@@ -4,7 +4,7 @@ msgstr "Content-Type: text/plain; charset=utf-8\n"
 
 msgctxt "field:company.company,xml_id:"
 msgid "XML Id"
-msgstr ""
+msgstr "Identifiant XML"
 
 msgctxt "field:ir.test_case,main_company_name:"
 msgid ""
